--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 0;
+    padding: 0px;
   }
   
   .blog-title {
@@ -22,7 +22,7 @@ body {
     
   }
     h1 .logo {
-    width: 100px; 
+    width: 150px; 
     height: auto; 
     border-radius: 300px;
   }
@@ -40,14 +40,22 @@ body {
   nav a:hover {
     color: #f53838;
   }
- 
+  
+   nav a:focus {
+    outline: none;
+  }
+  
+  nav a.active {
+    color: #fff;
+    font-weight: bold;
+  }
   nav ul {
     list-style-type: none;
     display: flex;
-    margin-top:50px; 
+    margin-top:20px; 
     padding: 0;
     justify-content: center;
-    gap: 30px;
+    gap: 200px;
   }
   
   nav ul li::after {
@@ -61,9 +69,42 @@ body {
     opacity: 0;
     transition: opacity 0.3s ease;
   }
-  
+nav ul li:hover::after,
+nav ul li.active::after {
+  opacity: 1;
+}
   nav li {
     margin-right: 10px;
+  }
+  /* Search bar styles */
+.search-form {
+    display: flex;
+    align-items: center;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+  
+  .search-input {
+    flex: 1;
+    border: none;
+    border-radius: 4px;
+    padding: 8px;
+    font-size: 16px;
+  }
+  
+  .search-button {
+    background-color: #bcbcbc;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 12px;
+    margin-left: 20px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .search-button:hover {
+    background-color: #555555;
   }
   
    
