--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
     margin-top:20px; 
     padding: 0;
     justify-content: center;
-    gap: 200px;
+    gap: 150px;
   }
   
   nav ul li::after {
@@ -63,7 +63,7 @@ body {
     position: absolute;
     bottom: -6px;
     left: 0;
-    width: 100%;
+    width: 50px;
     height: 2px;
     background-color: #333;
     opacity: 0;
@@ -122,8 +122,8 @@ main {
   .blog-post {
     background-color: #f9f9f9;
     border-radius: 4px;
-    margin-bottom: 20px;
-    padding: 20px;
+    margin-bottom: 15px;    
+    padding: 10px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
@@ -152,7 +152,7 @@ main {
   }
   
   .description {
-    font-size: 16px;
+    font-size: 17px;
     line-height: 1.4;
     color: #555;
   }
@@ -175,7 +175,19 @@ main {
     line-height: 1.4;
     font-size: 17px;
   }
-  /* Responsive Styles */
+  /* Footer styles */
+footer {
+    background-color: #f2f2f2;
+    padding: 10px 0;
+    text-align: center;
+    font-size: 15px;
+    color: #555;
+  }
+  
+  footer p {
+    margin-top: 40px;
+    font-size: 15px;
+  }
   .sidebar {
     flex: 0;
     margin-top: 40px;
@@ -185,4 +197,19 @@ main {
   .social-links li a i {
   font-size: 30px; 
 }
+ /* Responsive Styles */
+ 
+@media (max-width: 768px) {
+    .container {
+      padding: 40px;
+    }
+    .search-input {
+      width: 120px;
+      font-size: 10px;
+    }
   
+    .search-button {
+      padding: 4px 8px;
+      font-size: 12px;
+    }
+  }
